<resources>
    <string name="app_name">HOMFY</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">HOMFY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_main_page">Main</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_images">Images</string>
    <string name="title_wall">Wall</string>
    <string name="title_map">Map</string>
    <string name="title_friends">Friends</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_pass_work">Change Password</string>
    <string name="title_change_location">Default Location</string>
    <string name="title_language">Language</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="title_report">Report</string>
    <string name="title_logout">Log Out</string>
    <string name="title_close">Close</string>
    <string name="navigation_header_page">Page</string>
    <string name="navigation_header_your">Your</string>
    <string name="navigation_header_option">Option</string>
    <string name="navigation_header_system">System</string>
    <string name="hint_type_message">Write a message</string>
    <string name="hint_button_send">SEND</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_remember_login">Remember me</string>
    <string name="hint_btn_login">Login</string>
    <string name="hint_create_account">No account yet? Create one</string>
    <string name="hint_forget_password">Forgot your password</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_read_policy">I have read Privacy Policy</string>
    <string name="hint_create_account_back">Create Account</string>
    <string name="hint_login_back">Already a member? Login</string>
    <string name="hint_commented">commented on</string>
    <string name="hint_friend">friends</string>
    <string name="hint_mutual_friend">mutual friends.</string>
    <string name="hint_find_friend">May be you know this person?</string>
    <string name="hint_add_friend">add friend</string>
    <string name="hint_detail">detail</string>
    <string name="hint_nothing_found">we found nothing</string>
    <string name="hint_type_email">type email here</string>
    <string name="hint_sure_logout">Are you sure you want to log out?</string>
    <string name="hint_logout">Log out</string>
    <string name="hint_copyright">CopyRight \u00a9 2016 - HCMUS</string>
    <string name="hint_follow">follow</string>
    <string name="hint_post">post</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_birthday">Date Of Birth</string>
    <string name="hint_address">Address</string>
    <string name="hint_author">Author:</string>
    <string name="hint_hvngoc">\u2022 \t Ngoc V. Hoang</string>
    <string name="hint_nvtuong">\u2022 \t Tuong V. Nguyen</string>
    <string name="hint_description">Description: social network for enjoying our experience life.</string>
    <string name="hint_version">Version: 1.0.0</string>
    <string name="hint_more">More:</string>
    <string name="hint_about_student">\u2022 \t We are computer science students in honors program 2012, faculty of Information technology, university of science - VNU HCMC</string>
    <string name="hint_about_app">\u2022 \t This application is our research product of bachelor thesis major in computer science.</string>
    <string name="hint_dbtien">\u2022 \t Supervisor: Dr. Tien B. Dinh</string>
    <string name="hint_close">CLOSE</string>
    <string name="hint_change">CHANGE</string>
    <string name="hint_cancel">CANCEL</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_type_comment">  write a comment here &#8230;</string>
    <string name="hint_confirm_again">Confirm</string>
    <string name="hint_ok">OK</string>
    <string name="hint_choose_picture">Choose Picture</string>
    <string name="hint_browse">Browse</string>
    <string name="hint_create_post">Create a new post</string>
    <string name="hint_on_mind">Which place do you want to share?</string>
    <string name="hint_use_location_default">Default location</string>
    <string name="hint_use_your_location">Current location</string>
    <string name="hint_use_location_map">Get on map</string>
    <string name="hint_help_report">Help us to improve this application:</string>
    <string name="hint_help_description">Description</string>
    <string name="hint_run_background">Allow running in background</string>
    <string name="hint_on">ON</string>
    <string name="hint_off">OFF</string>
    <string name="hint_setting_near_post">Auto notify when you get near by post:</string>
    <string name="hint_setting_past">Auto notify your memory in the past:</string>
    <string name="hint_setting_send">Send your location for new post:</string>
    <string name="hint_change_radius">change radius for searching:</string>
    <string name="hint_type_search_map">type here for searching</string>
    <string name="menu_search_by_post">Search by post</string>
    <string name="menu_search_by_place">Search by place</string>
    <string name="feeling_funny">funny</string>
    <string name="feeling_happy">happy</string>
    <string name="feeling_money">money</string>
    <string name="feeling_normal">normal</string>
    <string name="feeling_refuse">confused</string>
    <string name="feeling_sad">sad</string>
    <string name="feeling_scare">SCARED</string>
    <string name="feeling_sleepy">sleepy</string>
    <string name="feeling_surprise">surprise</string>
    <string name="feeling_terrible">terrible</string>
    <string name="tag_food">food</string>
    <string name="tag_shopping">shopping</string>
    <string name="tag_sale">sale</string>
    <string name="tag_dangerous">dangerous</string>
    <string name="tag_traveller">traveller</string>
    <string name="tag_entertainment">entertainment</string>
    <string name="tag_event">event</string>
    <string name="tag_sport">sport</string>
    <string name="notification_string_comment">has just commented on your post.</string>
    <string name="notification_string_add_friend">want to become friend with you.</string>
    <string name="notification_string_confirm_friend">has just accepted your request</string>
    <string name="notification_string_my_post">here!! it has been one of the best memory in your life</string>
    <string name="notification_string_friend_post">here!! maybe it make you feel excited</string>
    <string name="friend_request">Request</string>
    <string name="friend_find">Find</string>
    <string name="friend_suggested">Suggested</string>
    <string name="friend_friends">Friends</string>
    <string name="dialog_delete_request">Are you sure for deleting this request?</string>
    <string name="dialog_confirm_request">Are you sure for confirming this request?</string>
    <string name="dialog_add_friend">Are you sure for making a friend request?</string>
    <string name="dialog_delete_friend">Are you sure for deleting from friend list?</string>
    <string name="unknown">UNKNOWN</string>
    <string name="warning">Warning</string>
    <string name="setting_gps">Setting GPS to determine your location??</string>
    <string name="un_friend">unFriend</string>
    <string name="send_request_ok">send request OK</string>
    <string name="input_email">please input email.</string>
    <string name="invalid_email">Oops! invalid email.</string>
    <string name="searching">Searching&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="view_wall">View wall</string>
    <string name="confirm_friend">Confirm</string>
    <string name="delete_request_friend">Delete Request</string>
    <string name="between_4_32">between 4 and 32 alphanumeric characters</string>
    <string name="new_password_same">New password is the same with the old one</string>
    <string name="password_not_match">oop!! password is not matching</string>
    <string name="change_pass_ok">Change password successfully</string>
    <string name="password_incorrect">Current password is incorrect.</string>
    <string name="feeling">feeling</string>
    <string name="upload_image_error">Upload Image Error</string>
    <string name="on">on</string>
    <string name="in_tag">in tag:</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="login_failed">Login failed</string>
    <string name="sure_logout">Are you sure for closing app without logout?</string>
    <string name="finding_around">Finding around</string>
    <string name="bounding_all">Bounding All</string>
    <string name="share_ok">Share OK!</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="read_policy">You must read privacy policy first</string>
    <string name="read">Read</string>
    <string name="email_used">Email have been used</string>
    <string name="relation_post">posted</string>
    <string name="relation_share">shared</string>
    <string name="help_post">share your best memories for friends and hold onto them forever</string>
    <string name="help_create">create post with tag and base on map</string>
    <string name="help_friend">connect with all people around the world for trying the best destination</string>
    <string name="help_map">visualize location on map and show suitable place for you</string>
</resources>