<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="6dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/comment_bg_title"
        android:text="@string/title_report"
        android:textSize="18sp"
        android:textColor="@android:color/white" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="2dip">
        <LinearLayout
            android:padding="2dip"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:paddingTop="8dip"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/hint_help_report"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/hint_help_description" />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_marginBottom="5dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/btn_setting_change"
                    android:layout_marginEnd="20dip"
                    android:layout_toStartOf="@+id/btn_setting_cancel"
                    android:text="@string/hint_button_send"
                    android:textColor="@color/primary"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/btn_setting_cancel"
                    android:layout_marginEnd="16dip"
                    android:layout_alignParentEnd="true"
                    android:text="@string/hint_cancel"
                    android:textColor="@color/primary"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>