<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="6dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/comment_bg_title"
        android:text="@string/title_change_location"
        android:textSize="18sp"
        android:textColor="@android:color/white" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <fragment
                android:layout_marginBottom="6dip"
                android:layout_width="match_parent"
                android:layout_height="350dip"
                android:id="@+id/MapDefaultLocation"
                class ="com.google.android.gms.maps.SupportMapFragment" />
            <TextView
                android:id="@+id/txtDefaultLocation"
                android:background="@color/common_action_bar_splitter"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/btn_setting_change"
                    android:layout_marginEnd="20dip"
                    android:layout_toStartOf="@+id/btn_setting_cancel"
                    android:text="@string/hint_change"
                    android:textColor="@color/primary"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/btn_setting_cancel"
                    android:layout_marginEnd="10dip"
                    android:layout_alignParentEnd="true"
                    android:text="@string/hint_cancel"
                    android:textColor="@color/primary"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>